[gd_scene load_steps=10 format=3 uid="uid://dd383qrm8h1fp"]

[ext_resource type="Script" uid="uid://6fxsuswnlvit" path="res://Dragon Game Template/Components/Control/DragonMenu/dragon_menu.gd" id="1_3mk37"]
[ext_resource type="Script" uid="uid://cd5gak3gbv3ff" path="res://Dragon Game Template/Menues/Pause Menu/pause_menu.gd" id="1_ewh3c"]
[ext_resource type="Script" uid="uid://d0f7ilaoon454" path="res://Dragon Game Template/Components/Control/Menu Focus Sorter/menu_focus_sorter.gd" id="2_ojfi6"]
[ext_resource type="PackedScene" uid="uid://djsu05jet2yg8" path="res://Dragon Game Template/Menues/Settings Menu/settings_menu.tscn" id="4_8h3g0"]
[ext_resource type="PackedScene" uid="uid://vqbq1nsfhp5w" path="res://Dragon Game Template/Menues/Settings Menu/Setting Description Box/setting_description_box.tscn" id="5_cp8bi"]

[sub_resource type="InputEventAction" id="InputEventAction_u6tmn"]
action = &"Backspace"
pressed = true

[sub_resource type="InputEventMouseButton" id="InputEventMouseButton_8h3g0"]
button_mask = 2
button_index = 2
pressed = true

[sub_resource type="Shortcut" id="Shortcut_8h3g0"]
events = [SubResource("InputEventAction_u6tmn"), SubResource("InputEventMouseButton_8h3g0")]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cp8bi"]

[node name="PauseMenu" type="Control" node_paths=PackedStringArray("settings_menu", "desciption_box")]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ewh3c")
settings_menu = NodePath("VBoxContainer/DragonMenu/SettingsMenu")
desciption_box = NodePath("VBoxContainer/SettingDescriptionBox")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 8
color = Color(0, 0, 0, 0.0980392)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "key_paused"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DragonMenu" type="TabContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(512, 256)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
tab_alignment = 1
current_tab = 1
script = ExtResource("1_3mk37")
tab_translation_keys = PackedStringArray()
auto_focus = true
metadata/_custom_type_script = "uid://6fxsuswnlvit"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/DragonMenu"]
visible = false
layout_mode = 2
metadata/_tab_index = 0

[node name="MenuFocusSorter" type="BoxContainer" parent="VBoxContainer/DragonMenu/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 2
alignment = 1
vertical = true
script = ExtResource("2_ojfi6")
metadata/_custom_type_script = "uid://d0f7ilaoon454"

[node name="ButtonResume" type="Button" parent="VBoxContainer/DragonMenu/MarginContainer/MenuFocusSorter"]
layout_mode = 2
shortcut = SubResource("Shortcut_8h3g0")
text = "key_resume"

[node name="SettingsMenu" parent="VBoxContainer/DragonMenu" instance=ExtResource("4_8h3g0")]
custom_minimum_size = Vector2(1248, 384)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_cp8bi")
metadata/_tab_index = 1

[node name="SettingDescriptionBox" parent="VBoxContainer" instance=ExtResource("5_cp8bi")]
layout_mode = 2
password = &"Settings"

[connection signal="pressed" from="VBoxContainer/DragonMenu/MarginContainer/MenuFocusSorter/ButtonResume" to="." method="_on_button_resume_pressed"]
